--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ rust-version = "1.72.0"
 publish = false
 
 [dependencies]
-# Dependencies from fuel-core repository:
-fuel-core-types = { version = "0.20.7", default-features = false }
-# Dependencies from fuels-rs repository:
-fuels = { version = "0.49", features = ["fuel-core-lib"] }
+fuel-core-types = { version = "0.21.0", default-features = false }
+fuels = { version = "0.53.0", features = ["fuel-core-lib"] }
+fuel-asm = "0.43.1"
+fuel-tx = "0.43.1"
 
 primitive-types = "0.12.1"
 sha3 = "0.10.1"
