--- a/Forc.toml
+++ b/Forc.toml
@@ -5,3 +5,5 @@ license = "Apache-2.0"
 name = "my-fuel-project"
 
 [dependencies]
+reentrancy = { git = "https://github.com/FuelLabs/sway-libs", tag = "v0.17.2" }
+src_20 = { git = "https://github.com/FuelLabs/sway-standards", tag = "v0.2.2" }
